Added dependency install to circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,40 @@
 version: 2.1
 
-orbs:
-  node: circleci/node@1.1.6
 jobs:
-  build-and-test:
-    executor:
-      name: node/default
+  Install_Dependencies:
+    docker:
+      - image: circleci/node:16.5
+    working_directory: ~/project
     steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: npm test
-workflows:
-  build-and-test:
-    jobs:
-      - build-and-test
+      - run:
+          name: Show curernt branch
+          command: echo ${CURRENT_BRANCH}
+      - restore_cache:
+          key:
+            - app-{{ checksum "package.json" }} # Hurrahz for random twitter people
+            - app-
+      - run:
+          name: Install depdencies
+          command: npm install
+      - save_cache:
+          paths:
+            - node_modules
+          key: app-{{ checksum "package.json" }}
+
+# orbs:
+#   node: circleci/node@1.1.6
+# jobs:
+#   build-and-test:
+#     executor:
+#       name: node/default
+#     steps:
+#       - checkout
+#       - node/with-cache:
+#           steps:
+#             - run: npm install
+#             - run: npm test
+# workflows:
+#   build-and-test:
+#     jobs:
+#       - build-and-test
