--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,12 +51,12 @@ jobs:
           command: |
             if [ "${CURRENT_BRANCH}" == "main" ]
             then
-              aws --region ${AWS_REGION} s3 sync ~/project/build s3:/${AWS_PRODUCTION_BUCKET} --delete
+              aws --region ${AWS_REGION} s3 sync ~/project/build s3://${AWS_PRODUCTION_BUCKET} --delete
             elif [ "${CURRENT_BRANCH}" == "staging" ]
             then
-              aws --region ${AWS_REGION} s3 sync ~/project/build s3:/${AWS_STAGING_BUCKET} --delete
+              aws --region ${AWS_REGION} s3 sync ~/project/build s3://${AWS_STAGING_BUCKET} --delete
             else
-              aws --region ${AWS_REGION} s3 sync ~/project/build s3:/${AWS_DEV_BUCKET} --delete
+              aws --region ${AWS_REGION} s3 sync ~/project/build s3://${AWS_DEV_BUCKET} --delete
             fi
 
   deploy_to_cloudfront:
