--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - checkout
       - run:
           name: Show curernt branch
-          command: echo ${CURRENT_BRANCH}
+          command: echo ${BRANCH}
       - restore_cache:
           keys:
             - app-{{ checksum "package.json" }} # Hurrahz for random twitter people
